[gd_scene load_steps=8 format=3 uid="uid://dus1mnt0e511a"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4l1n6"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_8e240"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="2_aidi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i08b"]
size = Vector2(16, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjw10"]
size = Vector2(1280, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbam7"]
size = Vector2(64, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1tol"]
size = Vector2(16, 16)

[node name="Main" type="Node2D"]
script = ExtResource("1_8e240")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Wrapper" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterLine" type="ColorRect" parent="HUD/Wrapper"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(3, 360)
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Score" type="HBoxContainer" parent="HUD/Wrapper"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_constants/separation = 100

[node name="ScorePlayer1" type="Label" parent="HUD/Wrapper/Score"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePlayer2" type="Label" parent="HUD/Wrapper/Score"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" type="StaticBody2D" parent="."]
position = Vector2(32, 360)
collision_mask = 2
script = ExtResource("1_4l1n6")
is_player = true
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -28.0
offset_right = 8.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource("RectangleShape2D_6i08b")

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(1248, 360)
collision_mask = 2
script = ExtResource("1_4l1n6")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -28.0
offset_right = 8.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_6i08b")

[node name="TopWall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(640, -20)
shape = SubResource("RectangleShape2D_xjw10")

[node name="BottomWall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(640, 736)
shape = SubResource("RectangleShape2D_xjw10")

[node name="Player2Goal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2Goal"]
position = Vector2(-32, 360)
shape = SubResource("RectangleShape2D_tbam7")

[node name="Player1Goal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1Goal"]
position = Vector2(1312, 360)
shape = SubResource("RectangleShape2D_tbam7")

[node name="Ball" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)
collision_layer = 4
collision_mask = 11
motion_mode = 1
script = ExtResource("2_aidi4")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_h1tol")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = -1
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true
